# homework

work1/1/: Q1  readme.md
work1/1/test/: 111.cpp
work1/2/: CMakeLists.txt  apple.cpp
work1/3/: CMakeLists.txt  reference.cpp  video_detect.cpp
work2/1/: 1634287874477.xml  CMakeLists.txt  car.cpp
work2/2/: CMakeLists.txt  draw.cpp
work2/3/: CMakeLists.txt  video.cpp
work3/kalma/: CMakeLists.txt  predict_ekf.cpp  predict_kf.cpp
work3/kalma/hw3_t2/__MACOSX/hw3_t2/: ._dollar.txt
work3/pnp/: CMakeLists.txt  solve_pnp.cpp
work3/pnp/hw3_t1/__MACOSX/: ._hw3_t1
work3/pnp/hw3_t1/__MACOSX/hw3_t1/: ._big_armor_scale.hpp  ._f_mat_and_c_mat.yml  ._imu_and_armor.txt
work4/keypoint_match/: CMakeLists.txt  keypoint_match.cpp
work4/pnp_stitch/: CMakeLists.txt  pnp_stitch.cpp
work4/pnp_stitch/hw4_t2/__MACOSX/: ._VO.cpp  ._VO.h  ._camera.yaml
work4/pnp_stitch/hw4_t2/__MACOSX/stereo-data/: ._1_dpt.tiff
